InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/vlocity_ins__ClaimLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents the insurance claim line item level details. Master-detail child object of the Claim.</description>
    <label>Claim Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>