InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__AssetCoverageName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssetCoverageName__c</fullName>
    <formula>IF (vlocity_ins__ClaimCoverageId__r.vlocity_ins__AssetCoverageId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__AssetCoverageId__r.Name, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Coverage Name</label>
    <type>Text</type>
</CustomField>