InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__AssetInsuredItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. Please use ClaimCoverageId__c.AssetInsuredItemId__c</description>
    <label>Claim Item</label>
    <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>ClaimLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>