InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ClaimantId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimantId__c</fullName>
    <formula>If (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__c,
        If (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__c,
        If (vlocity_ins__InvolvedItemId__c != null, vlocity_ins__InvolvedItemId__c,
        If (vlocity_ins__InvolvedPartyId__c != null, vlocity_ins__InvolvedPartyId__c, null ) ) ) )</formula>
    <label>Claimant Id</label>
    <type>Text</type>
</CustomField>