InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ClaimantName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimantName__c</fullName>
    <formula>IF (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedItemId__r.Name,
        IF (vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__c != null, vlocity_ins__ClaimCoverageId__r.vlocity_ins__InvolvedInjuryId__r.Name,
        If (vlocity_ins__InvolvedItemId__c != null, vlocity_ins__InvolvedItemId__r.Name,
        IF (vlocity_ins__InvolvedPartyId__c != null, vlocity_ins__InvolvedPartyId__r.Name, null) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Name</label>
    <type>Text</type>
</CustomField>