InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ClaimId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimId__c</fullName>
    <label>Claim Id</label>
    <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>ClaimLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>