InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ClaimLineItemCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimLineItemCode__c</fullName>
    <formula>vlocity_ins__ClaimLineItemCodeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Line Item Code</label>
    <type>Text</type>
</CustomField>