InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__DiagnosisCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DiagnosisCode__c</fullName>
    <formula>vlocity_ins__DiagnosisCodeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnosis Code</label>
    <type>Text</type>
</CustomField>