InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveDate__c</fullName>
    <label>Date Of Service</label>
    <type>DateTime</type>
</CustomField>