InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__InvolvedItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InvolvedItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. Please use ClaimCoverageId__c.InvolvedItemId__c</description>
    <label>Involved Item</label>
    <referenceTo>vlocity_ins__InsuranceClaimInvolvedProperty__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>ClaimLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>