InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__PayeeAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeeAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Line Items (Payee Account Id)</relationshipLabel>
    <relationshipName>PayeeClaimLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>