InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__PayeeContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeeContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Claim Line Items (Payee Contact Id)</relationshipLabel>
    <relationshipName>PayeeClaimLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>