InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__PayeePartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeePartyId__c</fullName>
    <formula>IF (vlocity_ins__PayeeAccountId__c != null, CASESAFEID(vlocity_ins__PayeeAccountId__r.vlocity_ins__PartyId__c), CASESAFEID(vlocity_ins__PayeeContactId__r.vlocity_ins__PartyId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Party Id</label>
    <type>Text</type>
</CustomField>