InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__PayeePartyName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeePartyName__c</fullName>
    <formula>IF (vlocity_ins__PayeeAccountId__c != null, vlocity_ins__PayeeAccountId__r.vlocity_ins__PartyId__r.Name, vlocity_ins__PayeeContactId__r.vlocity_ins__PartyId__r.Name )</formula>
    <label>Payee</label>
    <type>Text</type>
</CustomField>