InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__PayeeTaxId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PayeeTaxId__c</fullName>
    <formula>IF ( vlocity_ins__PayeeAccountId__c != null,  vlocity_ins__PayeeAccountId__r.vlocity_ins__TaxID__c,  vlocity_ins__PayeeContactId__r.vlocity_ins__TaxId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Tax Id</label>
    <type>Text</type>
</CustomField>