InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ProcedureCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcedureCode__c</fullName>
    <formula>vlocity_ins__ProcedureCodeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedure Code</label>
    <type>Text</type>
</CustomField>