InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ProcedureCodeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcedureCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure Code Id</label>
    <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
    <relationshipLabel>Claim Line Items (Procedure Code)</relationshipLabel>
    <relationshipName>ClaimLineItemsProcedureCode</relationshipName>
    <type>Lookup</type>
</CustomField>