InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ProviderIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderIdentifier__c</fullName>
    <formula>IF( vlocity_ins__ProviderAccountId__c !=null, vlocity_ins__ProviderAccountId__r.vlocity_ins__ProviderIdentifier__c,  vlocity_ins__ProviderContactId__r.vlocity_ins__ProviderIdentifier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Identifier</label>
    <type>Text</type>
</CustomField>