InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ProviderPartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderPartyId__c</fullName>
    <formula>IF(vlocity_ins__ProviderAccountId__c != NULL, CASESAFEID(vlocity_ins__ProviderAccountId__r.vlocity_ins__PartyId__c), CASESAFEID(vlocity_ins__ProviderContactId__r.vlocity_ins__PartyId__c) )</formula>
    <label>Provider Party Id</label>
    <type>Text</type>
</CustomField>