InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ReserveStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReserveStatus__c</fullName>
    <description>DEPRECATED</description>
    <label>Reserve Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reverted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>