InsuranceOrg/force-app/main/default/objects/vlocity_ins__ClaimLineItem__c/fields/vlocity_ins__ServiceLocationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ServiceLocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ProviderLocation</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>ServiceLocationClaimLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>